# ams

./: .codacy.yml  .codecov.yml  .flake8  .gitignore  .prospector.yaml  .readthedocs.yml  .zenodo.json  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  TODO.md  ams.yaml  ams_use.ipynb  azure-pipelines.yml  dev.md  environment.yml  genconf.py  genreq.py  geopandas.ipynb  pjm5bus_demo.json  project.toml  psedo_code.ipynb  pseudo_code.ipynb  pypower.ipynb  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-extra.txt  requirements-nlp.txt  requirements.txt  scipy.ipynb  setup.cfg  setup.py  solver.ipynb  versioneer.py
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codacy-coverage-reporter.yml  codecov.yml  codevis.yml  compatibility.yml  condaenv.yml  coverage.yml  create-diagram.yml  dupcode.yml  functional.yml  pretest.yml  publish-pypi.yml  publish-test-pypi.yml  publish.yml  pythonapp.yml  zenodo.yml
PYPOWER-5.1.15/: PKG-INFO  setup.cfg
PYPOWER-5.1.15/PYPOWER.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ams/: __init__.py  __main__.py  _version.py  benchmarks.py  cli.py  interface.py  main.py  plot.py  powerflow.py  report.py  shared.py  system.py
ams/bench/: __init__.py  __main__.py  cases.py  env.py  harness.py  routines.py  schema.py
ams/cases/: README.md
ams/core/: __init__.py  common.py  documenter.py  matprocessor.py  model.py  model_param.py  optz.py  param.py  routine_ns.py  service.py  symprocessor.py  var.py
ams/extension/: Aest.csv  __init__.py  eva.py
ams/interop/: __init__.py  andes.py
ams/io/: __init__.py  json.py  matpower.py  powerworld.py  psse.py  pypower.py  xlsx.py
ams/models/: __init__.py  agcr.py  area.py  bus.py  cost.py  group.py  horizon.py  info.py  jumper.py  line.py  region.py  reserve.py  rtnconfig.py  shunt.py  static.py  timeslot.py  zone.py
ams/nlopt/: __init__.py  pfmodel.py  pfopt.py
ams/opt/: __init__.py  _runtime_eval.py  constraint.py  expr.py  exprcalc.py  expression.py  objective.py  omodel.py  optbase.py  optzbase.py  ovar.py  param.py  pfmodel.py  var.py
ams/prep/: __init__.py  generator.py
ams/pypower/: __init__.py  api.py  bustypes.py  cpf_corrector.py  cpf_predictor.py  cplex_options.py  d2AIbr_dV2.py  d2ASbr_dV2.py  dSbr_dV.py  dcopf.py  dcopf_solver.py  e2i_data.py  e2i_field.py  eps.py  ext2int.py  fdpf.py  gausspf.py  gurobi_options.py  hasPQcap.py  i2e_data.py  i2e_field.py  idx.py  int2ext.py  io.py  ipopt_options.py  ipoptopf_solver.py  isload.py  loadcase.py  main.py  makeAang.py  makeApq.py  makeAvl.py  makeAy.py  makeB.py  makeBdc.py  makeLODF.py  makePTDF.py  makeSbus.py  makeYbus.py  modcost.py  (+38 more)
ams/routines/: __init__.py  acopf.py  base.py  cpf.py  dcopf.py  dcopf2.py  dcpf.py  dcpf0.py  dcpf2.py  dopf.py  ed.py  ed2.py  grbopt.py  opf.py  pflow.py  pflow0.py  pflow1.py  pflow2.py  pypower.py  rdopf.py  routine.py  routinebase.py  routinedata.py  rted.py  rted2.py  scdopf.py  type.py  uc.py  uc2.py  visrted.py
ams/solver/: __init__.py  ipp.py
ams/utils/: __init__.py  fileman.py  func.py  lazyimport.py  misc.py  paths.py  tab.py
bench/: README.md
bench/baselines/: 2026-04-22_develop.json
dev/demo/: 1.FileIO.ipynb  1.IO.ipynb  2.DispatchModeling.ipynb  2.PFlow.ipynb  2.PYPOWER.ipynb  3.1Type.ipynb  3.DCOPF.ipynb  3.OPF.ipynb  3.PFlow.ipynb  3.PyPower_func.ipynb  4.Doc.ipynb  4.OPT.ipynb  4.PyPower_wres.ipynb  4.RoutineVar.ipynb  5.1.Cosim.ipynb  5.1.Parser.ipynb  5.1GroupVar.ipynb  5.1SymPy.ipynb  5.1TestWithMatpower.ipynb  5.2.Doc.ipynb  5.2DCOPF.ipynb  5.2HiGHSpy.ipynb  5.3.Refactor.ipynb  5.3CVXPY.ipynb  5.CoSim.ipynb  5.DCOPF.ipynb  5.Interface.ipynb  5.Interop.ipynb  5.LinkPyPower.ipynb  5.OPF.ipynb  5.OPT.ipynb  5.ToPower.ipynb  6.1.ED.ipynb  6.FromPypower.ipynb  6.PFlow.ipynb  6.RTED.ipynb  6.Setup.ipynb  6.Symbolic.ipynb  6.Unpack.ipynb  7.OPF.ipynb  (+6 more)
dev/notes/: ems.md  index.md  log.md  notes.ipynb  notes.md  plan.md
dev_demo/: 0.Versioneer.ipynb  1.FileIO.ipynb  2.DispatchModeling.ipynb  3.PyPower_func.ipynb  3.Solver.ipynb  3.pypower.ipynb  4.PyPower_userfunc.ipynb  5.LinkPyPower.ipynb  fill_io.ipynb  versioneer.ipynb
docs/: Makefile
docs/source/: api.rst  conf.py  genmodelref.py  genroutineref.py  index.rst  release-notes.rst
examples/: ex1.ipynb  ex2.ipynb  ex3.ipynb  ex4.ipynb  ex5.ipynb  ex6.ipynb  ex7.ipynb  ex8.ipynb
examples/demonstration/: 1. ESD1.ipynb  demo_AGC.ipynb  demo_ESD1.ipynb  demo_dcopf.ipynb  demo_debug.ipynb  demo_mat.ipynb  demo_wrapper_routines.ipynb
examples/verification/: ams_dcopf_verification.ipynb
scripts/: genconf.py
solver_beckmark/: benchmark.ipynb
tests/: conftest.py  run_compat_audit.sh  test_1st_system.py  test_addressing.py  test_andes.py  test_andes_mats.py  test_bench.py  test_benchmarks.py  test_case.py  test_cli.py  test_dctypes.py  test_export_csv.py  test_export_json.py  test_group.py  test_import.py  test_interface.py  test_interop.py  test_io.py  test_jumper.py  test_known_good.py  test_matp.py  test_mats.py  test_migrate_timeslot.py  test_model.py  test_omodel.py  test_paths.py  test_report.py  test_routine.py  test_routine_ns.py  test_rtn_acopf.py  test_rtn_dcopf.py  test_rtn_dcopf2.py  test_rtn_dcpf.py  test_rtn_ed.py  test_rtn_ed2.py  test_rtn_opf.py  test_rtn_pflow.py  test_rtn_pypower.py  test_rtn_rted.py  test_rtn_rted2.py  (+4 more)
tests/codegen/: test_first_run_docs.py  test_generator.py
tests/core/: test_matprocessor.py  test_model.py  test_routine_ns.py  test_rparam_horizon.py  test_service.py
tests/interop/: test_andes_interface.py
tests/io/: test_case.py  test_export_csv.py  test_export_json.py  test_report.py
tests/models/: test_group.py
tests/opt/: test_omodel.py  test_runtime_eval.py
tests/routines/: test_routine_base.py  test_rtn_acopf.py  test_scenarios_known_good.py  test_scenarios_lp_multiperiod.py  test_scenarios_lp_singleperiod.py  test_scenarios_milp_multiperiod.py  test_scenarios_pflow.py
tools/: migrate_timeslot.py
(+234 files in other folders)
